--- a/app/templates/explorer-api.hbs
+++ b/app/templates/explorer-api.hbs
@@ -1,7 +1,4 @@
-<div class='view-header'>
-  {{breadcrumb-component pageTitle='explorer api'}}
-  {{view-label label='Riak Explorer API'}}
-</div>
+{{!--{{view-label label='Riak Explorer API'}}--}}
 
 {{#dashboard-module label='Service Information'}}
   <table class='key-value-table'>
