Removed unused api pages

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,4 +1,4 @@
 {{#dashboard-module label='Welcome to Riak Explorer'}}
   <p>Select a cluster from the nav bar on the left to view cluser information</p>
-  <p>View the {{link-to 'Explorer API' 'explorer_api'}}</p>
+  <p>View the help page</p>
 {{/dashboard-module}}
