--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,4 +1,7 @@
 {{#dashboard-module label='Welcome to Riak Explorer'}}
-  <p>Select a cluster from the nav bar on the left to view cluser information</p>
-  <p>View the help page</p>
+  <p>Select a cluster from the nav bar on the left to view its information.</p>
+  <p>
+    Need help? Visit the
+    {{link-to 'help page' 'help'}}.
+  </p>
 {{/dashboard-module}}
