--- a/app/templates/topbar.hbs
+++ b/app/templates/topbar.hbs
@@ -5,9 +5,9 @@
 
   <ul class="topbar-nav">
     <li class="topbar-nav-item">
-      {{#link-to 'application'}}
-        <span class="glyphicon glyphicon-tasks" aria-hidden="true"></span>
-        Some Item
+      {{#link-to 'help'}}
+        <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+        Help Section
       {{/link-to}}
     </li>
   </ul>
