View label component/flow overhauled. More declarative and flexible

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -50,16 +50,17 @@
     </div>
     <div class="results-panel">
       <div class="results-panel-inner">
+        {{#if showViewHeader}}
         <div class='view-header'>
-          {{#if showBreadCrumbs}}
-            {{breadcrumb-component
-            clusterSubSection=clusterSubSection
-            data=breadCrumbMap}}
-          {{/if}}
-          {{!--{{view-label--}}
-          {{!--pre-label='Bucket-Type'--}}
-          {{!--label=model.bucketTypeId}}--}}
-        </div>
+          {{breadcrumb-component
+          clusterSubSection=clusterSubSection
+          data=breadCrumbMap}}
+
+          {{view-label
+          pre-label=viewLabelMap.preLabel
+          label=viewLabelMap.label}}
+          </div>
+        {{/if}}
         {{outlet}}
       </div>
     </div>
