--- a/app/templates/components/view-label.hbs
+++ b/app/templates/components/view-label.hbs
@@ -1,5 +1,4 @@
-{{#if pre-label}}
-  {{pre-label}}:
-{{/if}}
-{{label}}
+{{!--Must all be on one line for whitespace reasons--}}
+{{#if pre-label}}{{pre-label}}{{/if}}{{#if label}}: {{label}}{{/if}}
+
 
