--- a/app/styles/layout/_sidebar-panel.scss
+++ b/app/styles/layout/_sidebar-panel.scss
@@ -92,6 +92,21 @@
     }
 
     .cluster-section-links {
+      %current-link-style {
+        &:after {
+          content: "";
+          position: absolute;
+          top: 50%;
+          left: 8px;
+          display: inline-block;
+          width: 8px;
+          height: 8px;
+          border-radius: 4px;
+          margin-top: -4px;
+          background: lighten($grayscale-color-light, $color-accent-percentage-large);
+        }
+      }
+
       a {
         @include dark-background-font;
         display: block;
@@ -101,9 +116,28 @@
         padding: 10px 10px 10px 25px;
         font-size: 16px;
         text-transform: uppercase;
+        position: relative;
 
         &:hover {
           background-color: $grayscale-color-dark;
+        }
+      }
+
+      &.current-section-is-data {
+        .data {
+          @extend %current-link-style;
+        }
+      }
+
+      &.current-section-is-ops {
+        .ops {
+          @extend %current-link-style;
+        }
+      }
+
+      &.current-section-is-query {
+        .query {
+          @extend %current-link-style;
         }
       }
     }
