--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -31,7 +31,7 @@
             </ul>
             <span class="cluster-status-circle {{currentCluster.status}}"></span>
           </header>
-          <nav class="cluster-section-links">
+          <nav class="cluster-section-links current-section-is-{{clusterSubSection}}">
             {{#link-to 'cluster.data' currentCluster.id class='data'}}
               <span class="glyphicon glyphicon-hdd" aria-hidden="true"></span>
               Data
@@ -51,14 +51,14 @@
     <div class="results-panel">
       <div class="results-panel-inner">
         {{#if showViewHeader}}
-        <div class='view-header'>
-          {{breadcrumb-component
-          clusterSubSection=clusterSubSection
-          data=breadCrumbMap}}
+          <div class='view-header'>
+            {{breadcrumb-component
+            clusterSubSection=clusterSubSection
+            data=breadCrumbMap}}
 
-          {{view-label
-          pre-label=viewLabelMap.preLabel
-          label=viewLabelMap.label}}
+            {{view-label
+            pre-label=viewLabelMap.preLabel
+            label=viewLabelMap.label}}
           </div>
         {{/if}}
         {{outlet}}
