Replaced tabs library due to old one throwing deprecation warnings

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -18,7 +18,7 @@
 @import "components/breadcrumb-component";
 @import "components/loading-spinner";
 @import "components/view-label";
-@import "components/em-tabs";
+@import "components/ivy-tabs";
 @import "components/key-value-table";
 @import "components/button-list";
 @import "components/cluster-resource-link";
