--- a/app/styles/components/_ivy-tabs.scss
+++ b/app/styles/components/_ivy-tabs.scss
@@ -1,8 +1,8 @@
-.em-tabs {
-  .em-tab-list {
+.ivy-tabs {
+  .ivy-tab-list {
     border-bottom: 1px solid $grayscale-color-x-light;
 
-    .em-tab {
+    .ivy-tab {
       padding: 15px 0;
       margin: 0 30px 0 0;
       display: inline-block;
@@ -10,8 +10,9 @@
       font-weight: bold;
       color: $branding-color-1;
       border: none;
+      outline: none;
 
-      &[active=true] {
+      &[aria-selected=true] {
         cursor: default;
         color: $grayscale-color-dark;
         border-bottom: 1px solid lighten($grayscale-color-dark, $color-accent-percentage-small);
@@ -20,7 +21,7 @@
     }
   }
 
-  .em-tab-panel {
+  .ivy-tab-panel {
     padding: 15px 0;
   }
 
