--- a/app/templates/components/dashboard-module.hbs
+++ b/app/templates/components/dashboard-module.hbs
@@ -1,10 +1,10 @@
-<div class="dashboard-module {{class}}">
-  {{#if label}}
-    <div class="module-label">
-      {{label}}
-    </div>
-  {{/if}}
-  <div class="module-content">
-    {{yield}}
-  </div>
+{{#if showHeader}}
+  <header class="module-header">
+    {{#if label}}
+      <span class="module-label">{{label}}</span>
+    {{/if}}
+  </header>
+{{/if}}
+<div class="module-content">
+  {{yield}}
 </div>
