Styled pages to have consistent theme and feel, maps still need work

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -28,6 +28,8 @@
 @import "components/content-editable";
 @import "components/code-list";
 @import "components/cluster-status";
+@import "components/map-section";
+@import "components/object-content-list";
 // View specific styling
 @import "views/object-counter-container";
 @import "views/loading-container";
