--- a/app/styles/components/_riak-object-styling.scss
+++ b/app/styles/components/_riak-object-styling.scss
@@ -1,4 +1,4 @@
-.riak-object {
+.legacy-map-styling {
   th {
     background: #FFF
   }
@@ -177,5 +177,4 @@
     margin: 0px 10px;
     vertical-align: middle;
   }
-
 }
