Loading spinner styling and consistency

--- a/app/templates/components/loading-spinner.hbs
+++ b/app/templates/components/loading-spinner.hbs
@@ -1,8 +1,25 @@
-{{#if statusMessage}}
-  <div class="text-center">{{statusMessage}}</div>
-{{/if}}
+<div class="loading-container">
+  {{#if statusMessage}}
+    <div class="status-message">
+      {{statusMessage}}
+   </div>
+  {{/if}}
 
-<div class="spinner">
-  <div class="double-bounce1"></div>
-  <div class="double-bounce2"></div>
+  <div class="spinner">
+    <div class="spinner-blade"></div>
+    <div class="spinner-blade"></div>
+    <div class="spinner-blade"></div>
+    <div class="spinner-blade"></div>
+    <div class="spinner-blade"></div>
+    <div class="spinner-blade"></div>
+    <div class="spinner-blade"></div>
+    <div class="spinner-blade"></div>
+    <div class="spinner-blade"></div>
+    <div class="spinner-blade"></div>
+    <div class="spinner-blade"></div>
+    <div class="spinner-blade"></div>
+  </div>
 </div>
+
+
+
