--- a/app/styles/components/_dashboard-module.scss
+++ b/app/styles/components/_dashboard-module.scss
@@ -26,7 +26,6 @@
     @include flex-direction(row);
     @include justify-content(space-between);
 
-    margin-bottom: 10px;
     padding: 10px 20px;
     border-bottom: 1px solid $grayscale-color-x-light;
 
@@ -76,7 +75,8 @@
   }
 
   .module-body {
-    padding: 10px 20px;
+    padding: 20px;
+    position: relative;
 
     .module-edit-group {
       .group-header {
