Updated all error states

--- a/app/templates/error/object-not-found.hbs
+++ b/app/templates/error/object-not-found.hbs
@@ -1,3 +1,6 @@
-{{#dashboard-module label='404 Object Not Found'}}
-  <p>The object id you requested was not found</p>
+{{#dashboard-module class='half'}}
+  {{dashboard-module-header label='404 Object Not Found'}}
+  {{#dashboard-module-body}}
+    <p>The object id you requested was not found</p>
+  {{/dashboard-module-body}}
 {{/dashboard-module}}
