--- a/app/templates/error/unknown.hbs
+++ b/app/templates/error/unknown.hbs
@@ -1,3 +1,6 @@
-{{#dashboard-module label='An unknown error has occurred'}}
-  <p>Consider opening a bug report.</p>
+{{#dashboard-module class='half'}}
+  {{dashboard-module-header label='An unknown error has occurred'}}
+  {{#dashboard-module-body}}
+    <p>Consider opening a bug report.</p>
+  {{/dashboard-module-body}}
 {{/dashboard-module}}
