--- a/app/templates/error/cluster-not-found.hbs
+++ b/app/templates/error/cluster-not-found.hbs
@@ -1,3 +1,6 @@
-{{#dashboard-module label='404 Cluster Not Found'}}
-  <p>The cluster id you requested was not found</p>
+{{#dashboard-module class='half'}}
+  {{dashboard-module-header label='404 Cluster Not Found'}}
+  {{#dashboard-module-body}}
+    <p>The cluster id you requested was not found</p>
+  {{/dashboard-module-body}}
 {{/dashboard-module}}
