--- a/app/templates/error/service-not-found.hbs
+++ b/app/templates/error/service-not-found.hbs
@@ -1,7 +1,10 @@
-{{#dashboard-module label='503 Service Unavailable'}}
-  <p>The application was not able to connect to the Riak Explorer API.</p>
-  <p>
-    Please refer to any documentation in the
-    <a href="https://github.com/basho-labs/riak_explorer">Github repository</a>
-  </p>
+{{#dashboard-module class='two-thirds'}}
+  {{dashboard-module-header label='503 Service Unavailable'}}
+  {{#dashboard-module-body}}
+    <p>The application was not able to connect to the Riak Explorer API.</p>
+    <p>
+      Please refer to any documentation in the
+      <a href="https://github.com/basho-labs/riak_explorer">Github repository</a>
+    </p>
+  {{/dashboard-module-body}}
 {{/dashboard-module}}
