Basic styling up for map types

--- a/app/templates/components/map-contents.hbs
+++ b/app/templates/components/map-contents.hbs
@@ -18,15 +18,14 @@ map=map
 sectionItems=map.countersList
 removeField=removeField}}
 
-{{!--{{map-sub-section--}}
-{{!--title='Sets'--}}
-{{!--map=map--}}
-{{!--sectionItems=map.setsList--}}
-{{!--removeField=removeField}}--}}
-
-{{map-sub-map
-title='Maps'
+{{map-sub-set
+title='Sets'
 map=map
+setItems=map.setsList
+removeField=removeField}}
+
+{{maps-list
+title='Maps'
 mapItems=map.mapsList
 removeField=removeField}}
 
