--- a/app/templates/components/map-sub-map.hbs
+++ b/app/templates/components/map-sub-map.hbs
@@ -1,15 +1,19 @@
-<h4>
-  <span class="map-section-title">
-    {{title}} ({{mapItems.length}})
-  </span>
-</h4>
-
-{{#each mapItems as | map |}}
+<div class="map-item" id={{map.name}}>
   <div class="map-name">
     {{map.name}}
-    <span class="expand-contents">view contents</span>
+    <span class="expand-contents">
+    <code {{action 'subMapToggle'}}>
+      {{#if showContent}}
+        <span class="glyphicon glyphicon-zoom-out" aria-hidden="true"></span>
+        <span class="toggle-text">hide contents</span>
+      {{else}}
+        <span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
+        <span class="toggle-text">view contents</span>
+      {{/if}}
+    </code>
+  </span>
   </div>
-  <div class="sub-map-contents">
-    {{map-contents map=currentSubMap}}
+  <div class={{if showContent 'sub-map-contents expanded' 'sub-map-contents'}}>
+    {{map-contents map=map}}
   </div>
-{{/each}}
+</div>
