--- a/app/templates/components/map-sub-section.hbs
+++ b/app/templates/components/map-sub-section.hbs
@@ -1,7 +1,6 @@
-<h4>
-  <span class="map-section-title">
-    {{title}} ({{sectionItems.length}})
-  </span>
+<h4 class="map-section-title">
+  {{title}}
+  <span class="badge">{{sectionItems.length}}</span>
 </h4>
 <table class="key-value-table">
   <tbody>
