--- a/app/styles/components/_map-section.scss
+++ b/app/styles/components/_map-section.scss
@@ -1,9 +1,12 @@
 .map-section {
   margin-bottom: 30px;
 
+  code {
+    font-size: 16px;
+  }
+
   .map-section-title {
-    @extend .label;
-    @extend .label-default;
+    text-transform: uppercase;
     margin-bottom: 10px;
   }
 
@@ -46,19 +49,26 @@
   }
 }
 
-.map-section.map-sub-map {
+.map-section.maps-list {
   .map-name {
     font-weight: bold;
+    margin-bottom: 10px;
 
     .expand-contents {
-      @extend a;
-      margin-left: 5px;
-      font-size: 11px;
+      margin-left: 15px;
       font-weight: normal;
+      cursor: pointer;
     }
   }
 
   .sub-map-contents {
     display: none;
+    padding: 10px;
+    margin-bottom: 10px;
+    background: rgba(0, 0, 0, .05);
+
+    &.expanded {
+      display: block;
+    }
   }
 }
