Error ui component. All alerts backfilled.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -30,6 +30,7 @@
 @import "components/cluster-status";
 @import "components/map-section";
 @import "components/object-content-list";
+@import "components/alerts";
 // View specific styling
 @import "views/object-counter-container";
 
