Add warning when default schema used in production

--- a/app/templates/alerts/error-invalid-xml.hbs
+++ b/app/templates/alerts/error-invalid-xml.hbs
@@ -1,3 +1,4 @@
 {{#bs-alert type="danger" dismissible=false}}
-  <strong>Invalid XML.</strong> Please check and make sure schema is valid xml.
+  <h4><span class="label label-danger">ERROR</span></h4>
+  Invalid XML. Please check and make sure schema is valid xml.
 {{/bs-alert}}
