--- a/app/templates/alerts/error-schema-not-saved.hbs
+++ b/app/templates/alerts/error-schema-not-saved.hbs
@@ -1,4 +1,5 @@
 {{#bs-alert type="danger" dismissible=false}}
+  <h4><span class="label label-danger">ERROR</span></h4>
   Something went wrong, schema was not saved.
 {{/bs-alert}}
 
