--- a/app/templates/alerts/error-solr-must-have-name.hbs
+++ b/app/templates/alerts/error-solr-must-have-name.hbs
@@ -1,3 +1,4 @@
 {{#bs-alert type="danger" dismissible=false}}
-  Solr requires that the schema tag has a name attribute. <strong>Please update your xml.</strong>
+  <h4><span class="label label-danger">ERROR</span></h4>
+  Solr requires that the schema tag has a name attribute. Please update your xml.
 {{/bs-alert}}
