--- a/app/templates/error/cluster-not-found.hbs
+++ b/app/templates/error/cluster-not-found.hbs
@@ -1,4 +1,4 @@
-{{#dashboard-module class='half'}}
+{{#dashboard-module class='small-width'}}
   {{dashboard-module-header label='404 Cluster Not Found'}}
   {{#dashboard-module-body}}
     <p>The cluster id you requested was not found</p>
