--- a/app/templates/error/service-not-found.hbs
+++ b/app/templates/error/service-not-found.hbs
@@ -1,4 +1,4 @@
-{{#dashboard-module class='two-thirds'}}
+{{#dashboard-module class='medium-width'}}
   {{dashboard-module-header label='503 Service Unavailable'}}
   {{#dashboard-module-body}}
     <p>The application was not able to connect to the Riak Explorer API.</p>
