--- a/app/templates/error/unknown.hbs
+++ b/app/templates/error/unknown.hbs
@@ -1,4 +1,4 @@
-{{#dashboard-module class='half'}}
+{{#dashboard-module class='small-width'}}
   {{dashboard-module-header label='An unknown error has occurred'}}
   {{#dashboard-module-body}}
     <p>Consider opening a bug report.</p>
