--- a/app/templates/help.hbs
+++ b/app/templates/help.hbs
@@ -1,4 +1,4 @@
-{{#dashboard-module class='no-border two-thirds'}}
+{{#dashboard-module class='no-border medium-width'}}
   {{#dashboard-module-body}}
     <div class="alert alert-info" role="alert">
       <h4>Feedback or suggestions welcome!</h4>
@@ -10,7 +10,7 @@
   {{/dashboard-module-body}}
 {{/dashboard-module}}
 
-{{#dashboard-module class='two-thirds'}}
+{{#dashboard-module class='medium-width'}}
   {{dashboard-module-header label='Riak Resources'}}
   {{#dashboard-module-body}}
     <p>
@@ -40,7 +40,7 @@
   {{/dashboard-module-body}}
 {{/dashboard-module}}
 
-{{#dashboard-module class='two-thirds'}}
+{{#dashboard-module class='medium-width'}}
   {{dashboard-module-header label='Riak Explorer Resources'}}
   {{#dashboard-module-body}}
     <p>
@@ -62,7 +62,7 @@
   {{/dashboard-module-body}}
 {{/dashboard-module}}
 
-{{#dashboard-module class='two-thirds'}}
+{{#dashboard-module class='medium-width'}}
   {{dashboard-module-header label='Setting up a cluster in Riak Explorer'}}
   {{#dashboard-module-body}}
     <ol>
