--- a/app/styles/components/_dashboard-module.scss
+++ b/app/styles/components/_dashboard-module.scss
@@ -4,12 +4,12 @@
   border: 1px solid $grayscale-color-x-light;
   border-top: 3px solid $grayscale-color-x-light;
 
-  &.half {
-    width: 50%;
+  &.small-width {
+    max-width: 600px;
   }
 
-  &.two-thirds {
-    width: 66.6%;
+  &.medium-width {
+    max-width: 800px;
   }
 
   &.no-border {
@@ -31,6 +31,7 @@
 
     .module-label {
       font-size: 18px;
+      line-height: 30px;
     }
 
     .module-actions {
