--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,4 +1,4 @@
-{{#dashboard-module class='half'}}
+{{#dashboard-module class='small-width'}}
   {{dashboard-module-header label='Welcome to Riak Explorer'}}
   {{#dashboard-module-body}}
 
