Bucket Props Tooltips

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -31,6 +31,7 @@
 @import "components/map-section";
 @import "components/object-content-list";
 @import "components/alerts";
+@import "components/tooltip";
 // View specific styling
 @import "views/object-counter-container";
 
