--- a/app/templates/components/bucket-properties.hbs
+++ b/app/templates/components/bucket-properties.hbs
@@ -6,15 +6,15 @@
     </td>
   </tr>
   <tr>
-    <td class='key'>Object type:</td>
+    <td class='key'>Object type</td>
     <td class='value'>{{model.props.objectType}}</td>
   </tr>
   <tr>
-    <td class='key'>Conflict Res. Strategy:</td>
+    <td class='key'>Conflict Res. Strategy</td>
     <td class='value'>{{model.props.resolutionStrategy}}</td>
   </tr>
   <tr>
-    <td class='key'>Quorum:</td>
+    <td class='key'>Quorum</td>
     <td class='value'>
       N_Val: {{model.props.nVal}}
       {{#if model.props.quorumRelevant}}
@@ -30,7 +30,10 @@
     </td>
   </tr>
   <tr>
-    <td class='key'>Search Index:</td>
+    <td class='key'>
+      Search Index
+      {{tooltip.bucket-props itemKey='search_index'}}
+    </td>
     <td class='value'>
       {{#if model.index}}
         {{#link-to 'search-index' model.index.cluster.clusterId model.index.name class='btn btn-primary'}}
