--- a/app/templates/components/link/bucket-type.hbs
+++ b/app/templates/components/link/bucket-type.hbs
@@ -1,3 +1,3 @@
-{{#link-to 'bucket-type' bucketType class='cluster-resource-link'}}
-  {{bucketType.bucketTypeId}}
+{{#link-to 'bucket-type' bucketType.cluster.name bucketType.name class='cluster-resource-link'}}
+  {{bucketType.name}}
 {{/link-to}}
