--- a/app/templates/components/link/link-index.hbs
+++ b/app/templates/components/link/link-index.hbs
@@ -1,3 +1,3 @@
-{{#link-to 'search-index' searchIndex.cluster.clusterId searchIndex.name class='cluster-resource-link'}}
+{{#link-to 'search-index' searchIndex.cluster.name searchIndex.name class='cluster-resource-link'}}
   {{searchIndex.name}}
 {{/link-to}}
