Bucket refactored to use Ember Data

--- a/app/templates/components/link/link-bucket.hbs
+++ b/app/templates/components/link/link-bucket.hbs
@@ -1,3 +1,6 @@
-{{#link-to 'bucket' bucket }}
-  {{bucket.bucketId}}
+{{#link-to 'bucket'
+  bucket.bucketType.cluster.name
+  bucket.bucketType.name
+  bucket.name}}
+  {{bucket.name}}
 {{/link-to}}
