--- a/app/templates/help.hbs
+++ b/app/templates/help.hbs
@@ -1,14 +1,4 @@
-{{#dashboard-module class='no-border medium-width'}}
-  {{#dashboard-module-body}}
-    <div class="alert alert-info" role="alert">
-      <h4>Feedback or suggestions welcome!</h4>
-      <p>
-        If you have any questions or pain points using Riak Explorer,
-        please open up an <a href="https://github.com/basho-labs/riak_explorer/issues" target="_blank">issue on Github</a>.
-      </p>
-    </div>
-  {{/dashboard-module-body}}
-{{/dashboard-module}}
+{{render 'alerts.feedback-welcome'}}
 
 {{#dashboard-module class='medium-width'}}
   {{dashboard-module-header label='Riak Resources'}}
