Delete bucket reimplemented

--- a/app/templates/components/table/bucket-props-overview.hbs
+++ b/app/templates/components/table/bucket-props-overview.hbs
@@ -1,5 +1,5 @@
 <tr>
-  <td class='key'>Object type</td>
+  <td class='key'>Object Type</td>
   <td class='value'>
     {{model.objectType}}
     {{#if model.isActive}}
