Loading slider added for route transitions

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -17,6 +17,7 @@
 @import "components/dashboard-module";
 @import "components/breadcrumb-component";
 @import "components/loading-spinner";
+@import "components/loading-slider";
 @import "components/view-label";
 @import "components/ivy-tabs";
 @import "components/key-value-table";
